<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.sign_in.SignInActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/clock_logo"
            app:layout_constraintBottom_toTopOf="@id/inputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4"
            app:layout_constraintVertical_chainStyle="packed" />

        <LinearLayout
            android:id="@+id/inputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/loginButton"
            app:layout_constraintEnd_toEndOf="@id/logo"
            app:layout_constraintStart_toStartOf="@id/logo"
            app:layout_constraintTop_toBottomOf="@id/logo">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txt_keep_the_time"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/txt_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/txt_email" />

            <EditText
                android:id="@+id/inputEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/hint_input_email"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txt_password" />

            <EditText
                android:id="@+id/inputPwEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/hint_input_password"
                android:inputType="textPassword"
                android:maxLines="1" />

        </LinearLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/txt_login"
            app:layout_constraintBottom_toTopOf="@id/signUpButton"
            app:layout_constraintEnd_toEndOf="@id/inputLayout"
            app:layout_constraintStart_toStartOf="@id/inputLayout"
            app:layout_constraintTop_toBottomOf="@id/inputLayout" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/txt_sign_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/loginButton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/loginButton"
            app:layout_constraintTop_toBottomOf="@id/loginButton" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>



