<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.sign_in_sign_up.SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_email"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"/>

        <EditText
            android:id="@+id/inputEmailEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_input_email"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/txtEmail"
            app:layout_constraintEnd_toStartOf="@id/btnEmailCheck"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnEmailCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_duplicate_check"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/inputEmailEditText"
            app:layout_constraintTop_toTopOf="@id/inputEmailEditText"
            app:layout_constraintBottom_toBottomOf="@id/inputEmailEditText"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/txtPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="비밀번호"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputEmailEditText"/>

        <EditText
            android:id="@+id/inputPasswordEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="8글자 이상 입력"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtPassword"/>

        <TextView
            android:id="@+id/txtNickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="닉네임"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputPasswordEditText"/>

        <EditText
            android:id="@+id/inputNicknameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="자유입력"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtNickname"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="회원가입하기"
            app:layout_constraintTop_toBottomOf="@id/inputNicknameEditText"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
